--- a/app/scss/utils/_variables.scss
+++ b/app/scss/utils/_variables.scss
@@ -15,6 +15,7 @@ $color-top-menu: #ebebeb;
 $title-color: #000;
 $title-color-wite: #fff;
 $color-placeholder: #797979;
+$text-gray: #6B6B6B;
 
 $font-size-h1: 60px;
 $line-height-h1: 72px;
@@ -46,6 +47,7 @@ $black-opacity: rgba(0, 0, 0, 0.4);
 $border-gray: #d8d8d8;
 $border-checkbox: #B1B1B1;
 
+
 $btn-red: #fa4616;
 $btn-red-hover: #DA2E00;
 
@@ -54,3 +56,8 @@ $shadow-red-hover: rgba(216, 48, 3, 0.4);
 $shadow-dark: rgba(0, 0, 0, 0.3);
 $shadow-light-text: #d3d3d3;
 $shadow-dark-text: #707070;
+
+
+$border-table: #DADADA;
+$table-color-lick: #444444;
+$table-row-border: #A9A9A9;
