modified some style input,slider, on page roletta and hover on footer-menu

--- a/app/scss/layout/_footer.scss
+++ b/app/scss/layout/_footer.scss
@@ -44,6 +44,15 @@
         li {
             >a {
                 color: $text-color-white;
+
+                &:hover {
+                    color: $yellow;
+                }
+
+                &:active,
+                &.active {
+                    color: $red-active;
+                }
             }
         }
 
