--- a/app/scss/utils/_variables.scss
+++ b/app/scss/utils/_variables.scss
@@ -43,6 +43,7 @@ $red-active: #FA4616;
 $slider-color-arrow: #898989;
 $tab-color: #777777;
 $black-opacity: rgba(0, 0, 0, 0.4);
+$error-color:#FA4616;
 
 $border-gray: #d8d8d8;
 $border-checkbox: #B1B1B1;
