--- a/app/css/style.css
+++ b/app/css/style.css
@@ -157,19 +157,35 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 
 .input-bark { background-color: #4b4b4b; color: #fff; }
 
+.input-bark.error { border: 1px solid #FA4616; }
+
 .input-bark::-webkit-input-placeholder { color: #fff; opacity: 0.5; font-weight: 100; }
 
 .input-bark:-ms-input-placeholder { color: #fff; opacity: 0.5; font-weight: 100; }
 
 .input-bark::placeholder { color: #fff; opacity: 0.5; font-weight: 100; }
 
-.input-light { background-color: #F1F1F1; margin-bottom: 10px; }
+.input-bark:hover::-webkit-input-placeholder { opacity: 1; }
+
+.input-bark:hover:-ms-input-placeholder { opacity: 1; }
+
+.input-bark:hover::placeholder { opacity: 1; }
+
+.input-light { background-color: #F1F1F1; margin-bottom: 10px; transition: color 0.3s; -webkit-transition: color 0.3s; -moz-transition: color 0.3s; -ms-transition: color 0.3s; -o-transition: color 0.3s; }
+
+.input-light.error { border: 1px solid #FA4616; }
 
 .input-light::-webkit-input-placeholder { color: #797979; font-weight: 100; }
 
 .input-light:-ms-input-placeholder { color: #797979; font-weight: 100; }
 
 .input-light::placeholder { color: #797979; font-weight: 100; }
+
+.input-light:hover::-webkit-input-placeholder { color: #000; }
+
+.input-light:hover:-ms-input-placeholder { color: #000; }
+
+.input-light:hover::placeholder { color: #000; }
 
 .cards-dark { background-color: #25282a; color: #fff; box-shadow: 0px 70px 100px rgba(0, 0, 0, 0.3); }
 
@@ -559,6 +575,8 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 
 .promotions__title { font-weight: 900; font-size: 36px; line-height: 43px; margin-bottom: 43px; color: #fff; }
 
+.promotions__item { -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; }
+
 .promotions__timer > span { font-weight: 700; margin-bottom: 16px; display: block; }
 
 .promotions__timer .timer { display: -webkit-flex; display: -ms-flexbox; display: flex; width: 285px; }
@@ -581,7 +599,7 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 
 .promotions__desc { -webkit-flex: 0 0 59.9%; -ms-flex: 0 0 59.9%; flex: 0 0 59.9%; padding: 48px 75px; }
 
-.promotions__image { height: 400px; -webkit-flex: 0 0 40.1%; -ms-flex: 0 0 40.1%; flex: 0 0 40.1%; }
+.promotions__image { height: 400px; -webkit-flex: 0 0 40.1%; -ms-flex: 0 0 40.1%; flex: 0 0 40.1%; max-width: 445px; }
 
 .promotions__image > img { width: 100%; height: 100%; -o-object-fit: cover; object-fit: cover; }
 
@@ -875,7 +893,7 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 
 .function-roletta__form > form { display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; margin-top: 23px; }
 
-.function-roletta__form > form .btn-red { margin-left: 30px; }
+.function-roletta__form > form .btn-red { margin-left: 30px; min-width: 350px; }
 
 .circle { display: -webkit-inline-flex; display: -ms-inline-flexbox; display: inline-flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; width: 160px; min-width: 160px; height: 157px; border-radius: 50%; -webkit-border-radius: 50%; -moz-border-radius: 50%; -ms-border-radius: 50%; -o-border-radius: 50%; border: 1px solid #B1B1B1; }
 
@@ -981,7 +999,7 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 
 .slider-brands .slick-prev:hover { width: 54px; transform: rotate(180deg); -webkit-transform: rotate(180deg); -moz-transform: rotate(180deg); -ms-transform: rotate(180deg); -o-transform: rotate(180deg); background: url(../image/icons/arrow-right-dark.svg) no-repeat center center; right: 50px; }
 
-.slider-brands__item { height: 200px; margin: 0 15px; display: -webkit-flex !important; display: -ms-flexbox !important; display: flex !important; -webkit-align-items: center; -ms-flex-align: center; align-items: center; padding: 0 48px; background-color: #fff; box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.2); }
+.slider-brands__item { height: 200px; margin: 0 15px; display: -webkit-flex !important; display: -ms-flexbox !important; display: flex !important; -webkit-align-items: center; -ms-flex-align: center; align-items: center; padding: 0 48px; background-color: #fff; border: 1px solid #CFCFCF; }
 
 @media only screen and (max-width: 1600px) { .roletta-control { background-position: top 815px right -100px; } }
 
@@ -1001,6 +1019,7 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
   .function-roletta .mb-87 { margin-bottom: 55px; }
   .function-roletta__form { margin-top: 109px; padding: 36px 60px 54px; }
   .function-roletta__form > h3 { font-size: 30px; line-height: 37px; }
+  .function-roletta__form > form .btn-red { min-width: 300px; }
   .circle { width: 90px; min-width: 90px; height: 90px; }
   .circle > img { width: 46px; }
   .circle_big { width: 150px; min-width: 150px; height: 150px; }
@@ -1047,6 +1066,7 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
   .function-roletta__item > p { margin-left: 12px; }
   .function-roletta__form > h3 { font-size: 24px; line-height: 29px; }
   .function-roletta__form > p { width: 67%; }
+  .function-roletta__form > form .btn-red { min-width: 270px; }
   .circle_big { margin-right: 18px; }
   .roletta-assortement__card { padding: 15px 10px; }
   .roletta-assortement__card > h4 { font-size: 18px; line-height: 22px; }
@@ -1101,7 +1121,7 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
   .roletta-assortement__color .group-radio-input .label-radio-input { margin: 50px 30px 0 0; }
   .roletta-download-catalog .download-catalog__wrap { padding: 26px 0 0; }
   .roletta-download-catalog .download-catalog__img { position: relative; top: 20px; right: 0; max-width: 100%; margin-bottom: -140px; }
-  .roletta-control { padding: 0; background-size: 580px; background-position: top 870px right; }
+  .roletta-control { padding: 0; background-size: 550px; background-position: top 870px right; }
   .roletta-control__header .image { display: none; }
   .roletta-control__header p { max-width: 100%; }
   .roletta-control__auto { padding: 37px 0 15px; }
@@ -1345,6 +1365,10 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 .footer__nav { display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; margin-top: 14px; }
 
 .footer__menu li > a { color: #fff; }
+
+.footer__menu li > a:hover { color: #FF9300; }
+
+.footer__menu li > a:active, .footer__menu li > a.active { color: #FA4616; }
 
 .footer__menu .counter { display: inline-block; font-weight: 300; font-size: 10px; line-height: 12px; padding: 1px 4px 2px; background-color: #ff1b1b; border-radius: 6.5px; -webkit-border-radius: 6.5px; -moz-border-radius: 6.5px; -ms-border-radius: 6.5px; -o-border-radius: 6.5px; margin-left: 4px; }
 
